kubernetes/ingress/alloy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy-ingress
  namespace: alloy
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt-ovh
    traefik.ingress.kubernetes.io/service.namespace: alloy
spec:
  ingressClassName: traefik
  rules:
    - host: alloy.ebruno.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy
                port:
                  number: 12345
  tls:
    - hosts:
      - alloy.ebruno.fr
